--- a/Intersect.Server/Pages/Shared/_Layout.cshtml
+++ b/Intersect.Server/Pages/Shared/_Layout.cshtml
@@ -6,7 +6,7 @@
     <title>@ViewData["Title"] - @Options.Instance.GameName</title>
 
     <environment include="Development">
-        <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css"/>
+        <!--link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css"/-->
         <link rel="stylesheet" href="~/css/theme.css"/>
         <link rel="stylesheet" href="~/css/index.css"/>
     </environment>
@@ -18,44 +18,39 @@
         <link rel="stylesheet" href="~/css/theme.css" asp-append-version="true"/>
         <link rel="stylesheet" href="~/css/index.css" asp-append-version="true"/>
     </environment>
+
+    <script>
+    	const root = document.documentElement;
+    	const theme = localStorage.getItem("theme");
+    	if (
+    		theme === "dark" ||
+    		(!theme && window.matchMedia("(prefers-color-scheme: dark)").matches)
+    	) {
+    		root.classList.add("theme-dark");
+    	} else {
+    		root.classList.remove("theme-dark");
+    	}
+    </script>
+
+    @await RenderSectionAsync("Styles", false)
 </head>
 <body>
-<header>
-    <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
-        <div class="container">
-            <a class="navbar-brand" asp-area="" asp-page="/Index">@Options.Instance.GameName</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
-                    aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
-                <ul class="navbar-nav flex-grow-1">
-                    <li class="nav-item">
-                        <a class="nav-link text-dark" asp-area="" asp-page="/Index">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link text-dark" asp-area="" asp-page="/Privacy">Privacy</a>
-                    </li>
-                </ul>
-                <partial name="_LoginPartial"/>
-            </div>
-        </div>
-    </nav>
-</header>
-<div class="container">
-    <main role="main" class="pb-3">
-        @RenderBody()
-    </main>
+<partial name="_SkipToContentPartial"/>
+<div class="page-wrapper">
+    <partial name="_Header"/>
+    <div class="content-wrapper">
+        <aside id="sidebar-left" class="sidebar left">
+        </aside>
+        <aside id="sidebar-right" class="sidebar right">
+        </aside>
+        <main class="content">
+            @RenderBody()
+        </main>
+    </div>
+    <partial name="_Footer"/>
 </div>
 
-<footer class="border-top footer text-muted">
-    <div class="container">
-        &copy; 2023 - @Options.Instance.GameName - <a asp-area="" asp-page="/Privacy">Privacy</a>
-    </div>
-</footer>
-
 <script src="~/lib/jquery/dist/jquery.min.js"></script>
-<script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
 <script src="~/js/site.js" asp-append-version="true"></script>
 
 @await RenderSectionAsync("Scripts", false)
