--- a/Intersect.Server/wwwroot/css/index.css
+++ b/Intersect.Server/wwwroot/css/index.css
@@ -1,22 +1,467 @@
-html {
-	font-size: 14px;
+@import url("./theme.css");
+@import url("./parts/layout.css");
+@import url("./parts/a11y.css");
+@import url("./parts/header.css");
+@import url("./parts/footer.css");
+@import url("./parts/sidebar.css");
+@import url("./parts/content.css");
+
+:root {
+	--user-font-scale: 1rem - 1rem;
+	--max-width: calc(100% - 1rem);
+
+	text-rendering: optimizespeed;
 }
 
-@media (min-width: 768px) {
-	html {
-		font-size: 16px;
+@media (min-width: 50em) {
+	:root {
+		--max-width: 46em;
 	}
 }
 
-.btn:focus, .btn:active:focus, .btn-link.nav-link:focus, .form-control:focus, .form-check-input:focus {
-	box-shadow: 0 0 0 0.1rem white, 0 0 0 0.25rem #258cfb;
+::selection {
+	background-color: var(--theme-selection-bg);
+	color: var(--theme-selection-color);
 }
 
-html {
-	position: relative;
-	min-height: 100%;
+* {
+	box-sizing: border-box;
+	margin: 0;
+}
+
+article>section :is(ul, ol)>*+* {
+	margin-top: 0.75rem;
+}
+
+article>section nav :is(ul, ol)>*+* {
+	margin-top: inherit;
+}
+
+.content>section>*+* {
+	margin-top: 1.25rem;
+}
+
+/* Global focus outline reset */
+*:focus:not(:focus-visible) {
+	outline: none;
 }
 
 body {
-	margin-bottom: 60px;
+	--header-height: 4rem;
+
+	background: var(--theme-bg);
+	color: var(--theme-text);
+	display: flex;
+	flex-direction: column;
+	font-family: var(--font-body);
+	font-size: 1rem;
+	font-size: clamp(0.875rem, 0.75rem + 0.375vw + var(--user-font-scale), 1rem);
+	max-width: 100vw;
+	min-height: 100vh;
+}
+
+nav ul {
+	list-style: none;
+	padding: 0;
+}
+
+.content>section> :first-child {
+	margin-top: 0;
+}
+
+/* Typography */
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+	font-weight: bold;
+	line-height: 1;
+	margin-bottom: 1rem;
+}
+
+:is(h2, h3):not(:first-child) {
+	margin-top: 3rem;
+}
+
+:is(h4, h5, h6):not(:first-child) {
+	margin-top: 2rem;
+}
+
+h1 {
+	font-size: 2.5rem;
+	font-weight: 800;
+}
+
+h2 {
+	font-size: 1.75rem;
+}
+
+h3 {
+	font-size: 1.5rem;
+}
+
+h4 {
+	font-size: 1.25rem;
+}
+
+h5 {
+	font-size: 1rem;
+}
+
+p {
+	line-height: 1.625em;
+}
+
+.content ul {
+	line-height: 1.125em;
+}
+
+p,
+.content ul {
+	color: var(--theme-text-light);
+}
+
+small,
+.text-small {
+	font-size: 0.875rem;
+}
+
+a {
+	color: var(--theme-text-accent);
+	font-weight: 400;
+	text-underline-offset: 0.08em;
+	transition: color 0.1s ease-out;
+}
+
+h1>a,
+h2>a,
+h3>a,
+h4>a,
+h5>a,
+h6>a {
+	display: inline-block;
+}
+
+a:hover,
+a:focus {
+	color: var(--theme-text-accent-dark);
+	text-decoration: underline;
+}
+
+a:focus {
+	outline: 0.125rem solid currentColor;
+	outline-offset: 0.25em;
+}
+
+.icon.icon-link {
+	background-image: url("/link.svg");
+	background-repeat: no-repeat;
+	display: none;
+	filter: contrast(100%);
+	height: 0.875em;
+	margin-left: 0.25em;
+	width: 0.875em;
+}
+
+:hover>a>.icon.icon-link {
+	display: inline-block;
+}
+
+.icon.icon-link>svg {
+	height: 100%;
+	width: 100%;
+}
+
+article>section :is(ul, ol) {
+	padding-left: 1em;
+}
+
+article>section li> :is(p, pre, blockquote):not(:first-child) {
+	margin-top: 1rem;
+}
+
+article>section nav :is(ul, ol) {
+	padding-left: inherit;
+}
+
+article>section nav {
+	margin-bottom: 2rem;
+	margin-top: 1rem;
+}
+
+article>section ::marker {
+	color: var(--theme-text-light);
+	font-weight: bold;
+}
+
+article>section iframe {
+	aspect-ratio: 16 / 9;
+	height: auto;
+	width: 100%;
+}
+
+code {
+	--border-radius: 0.1875rem;
+	--padding-block: 0.2rem;
+	--padding-inline: 0.33rem;
+
+	background-color: var(--theme-code-inline-bg);
+	border-radius: var(--border-radius);
+	color: inherit;
+	font-family: var(--font-mono);
+	font-size: 0.875em;
+	margin: calc(var(--padding-block) * -1) -0.125em;
+	overflow-wrap: break-word;
+	padding: var(--padding-block) var(--padding-inline);
+}
+
+a>code {
+	background: transparent;
+	color: var(--theme-text-accent);
+	position: relative;
+	text-underline-offset: var(--padding-block);
+}
+
+a>code::before {
+	background: var(--theme-accent);
+	border-radius: var(--border-radius);
+	bottom: 0;
+	content: '';
+	display: block;
+	left: 0;
+	opacity: var(--theme-accent-opacity);
+	position: absolute;
+	right: 0;
+	top: 0;
+}
+
+blockquote code {
+	background-color: var(--theme-bg);
+}
+
+pre>code {
+	font-size: 1em;
+}
+
+strong {
+	color: inherit;
+	font-weight: 600;
+}
+
+/* Supporting Content */
+
+pre.astro-code>code {
+	all: unset;
+}
+
+table,
+pre {
+	--padding-block: 1rem;
+	--padding-inline: 2rem;
+
+	font-family: var(--font-mono);
+	font-size: 0.875em;
+	line-height: 1.5;
+	margin-left: calc(var(--padding-inline) * -1);
+	margin-right: calc(var(--padding-inline) * -1);
+	overflow-x: auto;
+	overflow-y: hidden;
+	padding: var(--padding-block) var(--padding-inline);
+	padding-right: calc(var(--padding-inline) * 2);
+	position: relative;
+}
+
+table {
+	border-collapse: collapse;
+	margin: 0;
+	padding: var(--padding-block) 0;
+	width: 100%;
+}
+
+thead>tr {
+	background: var(--theme-bg-offset);
+}
+
+/* Zebra striping */
+tbody>tr:nth-of-type(odd) {
+	background: var(--theme-bg-hover);
+}
+
+th {
+	background: var(--color-black);
+	color: var(--theme-color);
+	font-weight: bold;
+}
+
+td,
+th {
+	padding: 0.375rem;
+	text-align: left;
+}
+
+pre {
+	background-color: var(--theme-code-bg);
+	color: var(--theme-code-text);
+}
+
+blockquote {
+	background-color: var(--theme-bg-offset);
+	border-left: 0.25rem solid var(--theme-text-light);
+	border-radius: 0 0.25rem 0.25rem 0;
+	line-height: 1.7;
+	margin: 2rem 0;
+	padding: 1.25em 1.5rem;
+}
+
+@media (min-width: 37.75em) {
+	pre {
+		--padding-inline: 1.25rem;
+
+		border-radius: 0.5rem;
+		margin-left: 0;
+		margin-right: 0;
+	}
+}
+
+img {
+	max-width: 100%;
+}
+
+.flex {
+	align-items: center;
+	display: flex;
+}
+
+button {
+	align-items: center;
+	background: var(--theme-bg);
+	background-color: var(--theme-bg);
+	border: 0;
+	border-radius: 99em;
+	color: var(--theme-text);
+	display: flex;
+	font-size: 1rem;
+	gap: 0.25em;
+	justify-items: center;
+	padding: 0.375em 0.625em;
+}
+
+h2.heading {
+	font-size: 1rem;
+	font-weight: 700;
+	margin-bottom: 0.5rem;
+	padding: 0.125rem 0;
+}
+
+/* Add line and padding on the left side */
+.header-link {
+	border-left: 0.25rem solid var(--theme-divider);
+	font-size: 1em;
+	padding-inline-start: 1rem;
+	transition: background-color 200ms ease-out,
+		border-inline-start-color 100ms ease-out,
+		margin-inline-start 0.1s ease-in-out;
+}
+
+.header-link a {
+	color: inherit;
+	display: inline-flex;
+	font: inherit;
+	gap: 0.5em;
+	line-height: 1.3;
+	padding: 0.375rem 0;
+	text-decoration: none;
+	unicode-bidi: plaintext;
+	width: 100%;
+}
+
+@media (min-width: 50em) {
+	.header-link a {
+		padding: 0.25rem 0;
+	}
+}
+
+.header-link:hover,
+.header-link:focus,
+.header-link:focus-within {
+	border-inline-start-color: var(--theme-accent-secondary);
+	margin-inline-start: 0.25rem;
+}
+
+/* Highlight TOC header link matching the current scroll position */
+.current-header-link {
+	background-color: var(--theme-bg-accent);
+
+	/* Indicates the current heading for forced colors users in older browsers */
+	outline: 1px solid transparent;
+}
+
+.current-header-link a {
+	color: var(--theme-text);
+}
+
+.header-link:hover a,
+.header-link a:focus {
+	color: var(--theme-text);
+	text-decoration: underline;
+}
+
+.header-link svg {
+	opacity: 0.6;
+}
+
+.header-link:hover svg {
+	opacity: 0.8;
+}
+
+.header-link.depth-3 {
+	padding-inline-start: 2rem;
+}
+
+.header-link.depth-4 {
+	padding-inline-start: 3rem;
+}
+
+/* Screenreader Only Text */
+.sr-only {
+	border-width: 0;
+	clip-path: inset(0 100% 100% 0);
+	height: 1px;
+	margin: -0.0625rem;
+	overflow: hidden;
+	padding: 0;
+	position: absolute;
+	white-space: nowrap;
+	width: 1px;
+}
+
+.focus-not-sr-only:focus,
+.focus-not-sr-only:focus-visible {
+	height: auto;
+	margin: 0;
+	overflow: visible;
+	padding: 0;
+	position: static;
+	white-space: normal;
+	width: auto;
+}
+
+:target {
+	scroll-margin: calc(var(--theme-sidebar-offset, 5rem) + 2rem) 0 2rem;
+}
+
+ol.horizontal,
+ul.horizontal {
+	align-items: center;
+	column-gap: 1em;
+	display: flex;
+	flex-direction: row;
+	justify-content: space-around;
+}
+
+video {
+	max-height: initial !important;
+	max-width: 100%;
 }
