--- a/Intersect.Server/Pages/Shared/_Footer.cshtml
+++ b/Intersect.Server/Pages/Shared/_Footer.cshtml
@@ -1,7 +1,6 @@
-<div class="footer-wrapper">
-    <footer class="border-top footer text-muted">
-        <div class="container">
-            &copy; 2023 - @Options.Instance.GameName - <a asp-area="" asp-page="/Privacy">Privacy</a>
-        </div>
-    </footer>
-</div>
+<section>
+    <span>Copyright &copy; 2023 @Options.Instance.GameName</span>
+</section>
+<section>
+    <a asp-area="" asp-page="/PrivacyPolicy">@PrivacyPolicyResources.Title</a>
+</section>
