feat: layout, login and registration

--- a/Intersect.Server/Pages/PrivacyPolicy.cshtml
+++ b/Intersect.Server/Pages/PrivacyPolicy.cshtml
@@ -3,6 +3,8 @@
 @{
     ViewData["Title"] = @PrivacyPolicyResources.Title;
 }
-<h1>@ViewData["Title"]</h1>
 
-<p>@PrivacyPolicyResources.PrivacyPolicy</p>
+<article>
+    <h1>@ViewData["Title"]</h1>
+    <p>@PrivacyPolicyResources.PrivacyPolicy</p>
+</article>
