--- a/Intersect.Server/Areas/Identity/Pages/Account/Login.cshtml
+++ b/Intersect.Server/Areas/Identity/Pages/Account/Login.cshtml
@@ -2,82 +2,38 @@
 @model LoginModel
 
 @{
-    ViewData["Title"] = "Log in";
+    ViewData["Title"] = LoginResources.Title;
 }
 
-<h1>@ViewData["Title"]</h1>
-<div class="row">
-    <div class="col-md-4">
-        <section>
-            <form id="account" method="post">
-                <h2>Use a local account to log in.</h2>
-                <hr />
-                <div asp-validation-summary="ModelOnly" class="text-danger" role="alert"></div>
-                <div class="form-floating mb-3">
-                    <input asp-for="Input.UsernameOrEmail" class="form-control" autocomplete="username" aria-required="true" placeholder="name or name@example.com" />
-                    <label asp-for="Input.UsernameOrEmail" class="form-label">Username or Email</label>
-                    <span asp-validation-for="Input.UsernameOrEmail" class="text-danger"></span>
-                </div>
-                <div class="form-floating mb-3">
-                    <input asp-for="Input.Password" class="form-control" autocomplete="current-password" aria-required="true" placeholder="password" />
-                    <label asp-for="Input.Password" class="form-label">Password</label>
-                    <span asp-validation-for="Input.Password" class="text-danger"></span>
-                </div>
-                <div class="checkbox mb-3">
-                    <label asp-for="Input.RememberMe" class="form-label">
-                        <input class="form-check-input" asp-for="Input.RememberMe" />
-                        @Html.DisplayNameFor(m => m.Input.RememberMe)
-                    </label>
-                </div>
-                <div>
-                    <button id="login-submit" type="submit" class="w-100 btn btn-lg btn-primary">Log in</button>
-                </div>
-                <div>
-                    <p>
-                        <a id="forgot-password" asp-page="./ForgotPassword">Forgot your password?</a>
-                    </p>
-                    <p>
-                        <a asp-page="./Register" asp-route-returnUrl="@Model.ReturnUrl">Register as a new user</a>
-                    </p>
-                    <p>
-                        <a id="resend-confirmation" asp-page="./ResendEmailConfirmation">Resend email confirmation</a>
-                    </p>
-                </div>
-            </form>
-        </section>
-    </div>
-    <div class="col-md-6 col-md-offset-2">
-        <section>
-            <h3>Use another service to log in.</h3>
-            <hr />
-            @{
-                if ((Model.ExternalLogins?.Count ?? 0) == 0)
-                {
-                    <div>
-                        <p>
-                            There are no external authentication services configured. See this <a href="https://go.microsoft.com/fwlink/?LinkID=532715">article
-                            about setting up this ASP.NET application to support logging in via external services</a>.
-                        </p>
-                    </div>
-                }
-                else
-                {
-                    <form id="external-account" asp-page="./ExternalLogin" asp-route-returnUrl="@Model.ReturnUrl" method="post" class="form-horizontal">
-                        <div>
-                            <p>
-                                @foreach (var provider in Model.ExternalLogins!)
-                                {
-                                    <button type="submit" class="btn btn-primary" name="provider" value="@provider.Name" title="Log in using your @provider.DisplayName account">@provider.DisplayName</button>
-                                }
-                            </p>
-                        </div>
-                    </form>
-                }
-            }
-        </section>
-    </div>
-</div>
+<article class="modal small">
+    <h1>@LoginResources.Title</h1>
+    <form id="account" method="post">
+        <div asp-validation-summary="ModelOnly" class="text-danger" role="alert"></div>
+        <fieldset>
+            <input asp-for="Input.UsernameOrEmail" autocomplete="username" aria-required="true" placeholder required />
+            <label asp-for="Input.UsernameOrEmail">@IdentityResources.Username</label>
+            <span asp-validation-for="Input.UsernameOrEmail" class="text-danger"></span>
+        </fieldset>
+        <fieldset>
+            <input asp-for="Input.Password" autocomplete="current-password" aria-required="true" placeholder required />
+            <label asp-for="Input.Password">@IdentityResources.Password</label>
+            <span asp-validation-for="Input.Password" class="text-danger"></span>
+        </fieldset>
+        <fieldset>
+            <input asp-for="Input.RememberMe"/>
+            <label asp-for="Input.RememberMe">@LoginResources.RememberMe</label>
+        </fieldset>
+        <fieldset class="center">
+            <button id="login-submit" type="submit" title="@LoginResources.Submit">@LoginResources.Submit</button>
+        </fieldset>
+    </form>
+    <aside>
+        <a id="forgot-password" asp-page="./ForgotPassword">@LoginResources.ForgotUsernameOrPassword</a>
+        <a asp-page="./Register" asp-route-returnUrl="@Model.ReturnUrl">@LoginResources.Register</a>
+        <a id="resend-confirmation" asp-page="./ResendEmailConfirmation">@ResendEmailConfirmationResources.Title</a>
+    </aside>
+</article>
 
 @section Scripts {
-    <partial name="_ValidationScriptsPartial" />
+    <partial name="_ValidationScriptsPartial"/>
 }
