--- a/Intersect.Server/Areas/Identity/Pages/Account/Manage/_Layout.cshtml
+++ b/Intersect.Server/Areas/Identity/Pages/Account/Manage/_Layout.cshtml
@@ -9,20 +9,11 @@
     }
 }
 
-<h1>Manage your account</h1>
+@section SidebarLeft {
+    <partial name="_ManageNav" />
+}
 
-<div>
-    <h2>Change your account settings</h2>
-    <hr />
-    <div class="row">
-        <div class="col-md-3">
-            <partial name="_ManageNav" />
-        </div>
-        <div class="col-md-9">
-            @RenderBody()
-        </div>
-    </div>
-</div>
+@RenderBody()
 
 @section Scripts {
     @RenderSection("Scripts", required: false)
