--- a/Intersect.Server/Areas/Identity/Pages/Account/Register.cshtml
+++ b/Intersect.Server/Areas/Identity/Pages/Account/Register.cshtml
@@ -1,72 +1,42 @@
 ﻿@page
 @model RegisterModel
 @{
-    ViewData["Title"] = "Register";
+    ViewData["Title"] = RegisterResources.Title;
 }
 
-<h1>@ViewData["Title"]</h1>
-
-<div class="row">
-    <div class="col-md-4">
-        <form id="registerForm" asp-route-returnUrl="@Model.ReturnUrl" method="post">
-            <h2>Create a new account.</h2>
-            <hr />
-            <div asp-validation-summary="ModelOnly" class="text-danger" role="alert"></div>
-            <div>
-                <input asp-for="Input.UserName" autocomplete="username" aria-required="true" placeholder="user1234" />
-                <label asp-for="Input.UserName">Username</label>
-                <span asp-validation-for="Input.UserName" class="text-danger"></span>
-            </div>
-            <div class="form-floating mb-3">
-                <input asp-for="Input.Email" class="form-control" autocomplete="email" aria-required="false" placeholder="name@example.com" />
-                <label asp-for="Input.Email">Email</label>
-                <span asp-validation-for="Input.Email" class="text-danger"></span>
-            </div>
-            <div class="form-floating mb-3">
-                <input asp-for="Input.Password" class="form-control" autocomplete="new-password" aria-required="true" placeholder="password" />
-                <label asp-for="Input.Password">Password</label>
-                <span asp-validation-for="Input.Password" class="text-danger"></span>
-            </div>
-            <div class="form-floating mb-3">
-                <input asp-for="Input.ConfirmPassword" class="form-control" autocomplete="new-password" aria-required="true" placeholder="password" />
-                <label asp-for="Input.ConfirmPassword">Confirm Password</label>
-                <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
-            </div>
-            <button id="registerSubmit" type="submit" class="w-100 btn btn-lg btn-primary">Register</button>
-        </form>
-    </div>
-    <div class="col-md-6 col-md-offset-2">
-        <section>
-            <h3>Use another service to register.</h3>
-            <hr />
-            @{
-                if ((Model.ExternalLogins?.Count ?? 0) == 0)
-                {
-                    <div>
-                        <p>
-                            There are no external authentication services configured. See this <a href="https://go.microsoft.com/fwlink/?LinkID=532715">article
-                            about setting up this ASP.NET application to support logging in via external services</a>.
-                        </p>
-                    </div>
-                }
-                else
-                {
-                    <form id="external-account" asp-page="./ExternalLogin" asp-route-returnUrl="@Model.ReturnUrl" method="post" class="form-horizontal">
-                        <div>
-                            <p>
-                                @foreach (var provider in Model.ExternalLogins!)
-                                {
-                                    <button type="submit" class="btn btn-primary" name="provider" value="@provider.Name" title="Log in using your @provider.DisplayName account">@provider.DisplayName</button>
-                                }
-                            </p>
-                        </div>
-                    </form>
-                }
-            }
-        </section>
-    </div>
-</div>
+<article class="modal small">
+    <h1>@RegisterResources.Title</h1>
+    <form id="account" method="post">
+        <div asp-validation-summary="ModelOnly" class="text-danger" role="alert"></div>
+        <fieldset>
+            <input asp-for="Input.UserName" autocomplete="username" aria-required="true" required placeholder/>
+            <label asp-for="Input.UserName">@IdentityResources.Username</label>
+            <span asp-validation-for="Input.UserName" class="text-danger"></span>
+        </fieldset>
+        <fieldset>
+            <input asp-for="Input.Email" class="form-control" autocomplete="email" aria-required="false" placeholder/>
+            <label asp-for="Input.Email">@IdentityResources.Email</label>
+            <span asp-validation-for="Input.Email" class="text-danger"></span>
+        </fieldset>
+        <fieldset>
+            <input asp-for="Input.Password" class="form-control" autocomplete="new-password" aria-required="true" required placeholder/>
+            <label asp-for="Input.Password">@IdentityResources.Password</label>
+            <span asp-validation-for="Input.Password" class="text-danger"></span>
+        </fieldset>
+        <fieldset>
+            <input asp-for="Input.ConfirmPassword" class="form-control" autocomplete="new-password" aria-required="true" required placeholder/>
+            <label asp-for="Input.ConfirmPassword">@RegisterResources.ConfirmPassword</label>
+            <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
+        </fieldset>
+        <fieldset class="center">
+            <button id="register-submit" type="submit" title="@RegisterResources.Submit">@RegisterResources.Submit</button>
+        </fieldset>
+    </form>
+    <aside>
+        <a asp-page="./Login">@RegisterResources.Login</a>
+    </aside>
+</article>
 
 @section Scripts {
-    <partial name="_ValidationScriptsPartial" />
+    <partial name="_ValidationScriptsPartial"/>
 }
