--- a/Intersect.Server/Pages/Shared/_LoginPartial.cshtml
+++ b/Intersect.Server/Pages/Shared/_LoginPartial.cshtml
@@ -10,14 +10,18 @@
         </li>
         <li>
             <form asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Page("/", new { area = "" })" method="post">
-                <button type="submit">Logout</button>
+                <button type="submit">
+                    <span>Logout</span>
+                </button>
             </form>
         </li>
     }
     else
     {
         <li>
-            <a asp-area="Identity" asp-page="/Account/Login">Login</a>
+            <a asp-area="Identity" asp-page="/Account/Login">
+                <span>Login</span>
+            </a>
         </li>
     }
 </ul>
