--- a/Intersect.Server/Web/Pages/_ViewImports.cshtml
+++ b/Intersect.Server/Web/Pages/_ViewImports.cshtml
@@ -1,4 +1,5 @@
-﻿@using Intersect.Server.Web.Pages
+﻿@using Intersect.Server.Editors
+@using Intersect.Server.Web.Pages
 @using Htmx.TagHelpers
 @namespace Intersect.Server.Web.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
