fix: more prototyping

--- a/Intersect.Server/Web/Pages/Developer/Editors/AnimationDescriptor/Index.cshtml
+++ b/Intersect.Server/Web/Pages/Developer/Editors/AnimationDescriptor/Index.cshtml
@@ -6,7 +6,7 @@
     ViewData["Title"] = "Animation Editor";
 }
 
-<article class="page">
+<article class="page editor">
     <component type="typeof(Counter)" render-mode="WebAssemblyPrerendered"/>
 
     <h1>Animation Editor</h1>
